--- a/task3.css
+++ b/task3.css
@@ -41,6 +41,7 @@ img{
     font-size: 2rem;
     font-family: "Hiragino Sans GB";
     color: rgb(255, 255, 255);
+    line-height: 1.807;
     position: absolute;
     left: 14.69%;
     right:14.69%;
@@ -50,7 +51,6 @@ span{
     font-size: 2rem;
     font-family: "Adobe Heiti Std";
     color: rgb(255, 255, 255);
+    margin-top: 16px;
+    display:block;
 }
-
-
-
